--- a/pages/activities.html
+++ b/pages/activities.html
@@ -8,7 +8,7 @@
     <!--For C856 WGU-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/style.css">
-    <title>Lodging</title>
+    <title>Events</title>
 </head>
 
 <body>
@@ -21,13 +21,13 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Lodging</a>
+                <a class="nav-link" href="#">Lodging</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Transportation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
+                <a class="nav-link active" href="#">Events</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Activities</a>
@@ -49,28 +49,20 @@
         <form>
           <div style="max-width: 400px;">
           </div>
-          <h2>Find a place to stay:</h2>
-          <a href="./transportation.html"><button type="button" class="btn btn-warning">Skip</button></a>
+          <h2>Attend an event:</h2>
+          <a href="./lodging.html"><button type="button" class="btn btn-secondary">Back to Transportation</button></a>
+          <a href="./events.html"><button type="button" class="btn btn-warning">Skip</button></a>
           <div style="display: flex; padding-bottom: 18px;max-width : 450px;">
           </div>
-          <div style="padding-bottom: 18px;">Arrival date<br/>
+          <div style="padding-bottom: 18px;">Date<br/>
           <input type="text" id="data_6" name="data_6" style="max-width : 250px;" class="form-control"/>
           </div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
           <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
           <script type="text/javascript">new Pikaday({ field: document.getElementById('data_6') });</script>
-          <div style="padding-bottom: 18px;">Departure date<br/>
-          <input type="text" id="data_7" name="data_7" style="max-width : 250px;" class="form-control"/>
-          </div>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
-          <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
-          <script type="text/javascript">new Pikaday({ field: document.getElementById('data_7') });</script>
-          <div style="padding-bottom: 18px;">Number of adults<br/>
-          <input type="number" id="data_8" name="data_8" style="max-width : 250px;" class="form-control"/>
-          </div>
-          <div style="padding-bottom: 18px;">Number of children<br/>
-          <input type="number" id="data_9" name="data_9" style="max-width : 250px;" class="form-control"/>
-          </div>
+          <div style="padding-bottom: 18px;">Number of guests<br/>
+            <input type="number" id="data_9" name="data_9" style="max-width : 250px;" class="form-control"/>
+            </div>
           <button type="button" class="btn btn-info">Search</button>
         </form>
       </section>
@@ -87,9 +79,9 @@
                   <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                   <figcaption class="figure-caption">INFO</figcaption>
                   <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+                    <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                     <label class="form-check-label" for="exampleRadios1">
-                      Reserve
+                      Attend
                     </label>
                   </div>
                 </figure>
@@ -101,9 +93,9 @@
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                     <figcaption class="figure-caption">INFO</figcaption>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                      <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
-                        Reserve
+                        Attend
                       </label>
                     </div>
                   </figure>
@@ -115,9 +107,9 @@
                     <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
                     <figcaption class="figure-caption">INFO</figcaption>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1">
+                      <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios1" value="option1">
                       <label class="form-check-label" for="exampleRadios1">
-                        Reserve
+                        Attend
                       </label>
                     </div>
                   </figure>
@@ -125,7 +117,7 @@
             </div>
           </div>
           <div class="text-center">
-            <a href="./transportation.html"><button type="button" class="btn btn-info">Next</button></a>
+            <a href="./activities.html"><button type="button" class="btn btn-info">Next</button></a>
           </div>
         </div>
       </section>
