--- a/pages/transportation.html
+++ b/pages/transportation.html
@@ -8,7 +8,7 @@
     <!--For C856 WGU-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/style.css">
-    <title>Lodging</title>
+    <title>Transportation</title>
 </head>
 
 <body>
@@ -21,10 +21,10 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" href="#">Lodging</a>
+                <a class="nav-link" href="#">Lodging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Transportation</a>
+                <a class="nav-link active" href="#">Transportation</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Events</a>
@@ -49,28 +49,48 @@
         <form>
           <div style="max-width: 400px;">
           </div>
-          <h2>Find a place to stay:</h2>
-          <a href="./transportation.html"><button type="button" class="btn btn-warning">Skip</button></a>
+          <h2>Rent a vehicle:</h2>
+          <a href="./lodging.html"><button type="button" class="btn btn-secondary">Back to Lodging</button></a>
+          <a href="./events.html"><button type="button" class="btn btn-warning">Skip</button></a>
           <div style="display: flex; padding-bottom: 18px;max-width : 450px;">
           </div>
-          <div style="padding-bottom: 18px;">Arrival date<br/>
+          <div style="padding-bottom: 18px;">Pick-up date<br/>
           <input type="text" id="data_6" name="data_6" style="max-width : 250px;" class="form-control"/>
           </div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
           <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
           <script type="text/javascript">new Pikaday({ field: document.getElementById('data_6') });</script>
-          <div style="padding-bottom: 18px;">Departure date<br/>
+          <div style="padding-bottom: 18px;">Return date<br/>
           <input type="text" id="data_7" name="data_7" style="max-width : 250px;" class="form-control"/>
           </div>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/pikaday.min.js" type="text/javascript"></script>
           <link href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.4.0/css/pikaday.min.css" rel="stylesheet" type="text/css" />
           <script type="text/javascript">new Pikaday({ field: document.getElementById('data_7') });</script>
-          <div style="padding-bottom: 18px;">Number of adults<br/>
-          <input type="number" id="data_8" name="data_8" style="max-width : 250px;" class="form-control"/>
+          <div style="padding-bottom: 18px;">Make<br/>
+            <select id="data_9" name="data_9" style="max-width : 250px;" class="form-control">
+                <option value="volvo">Fjord</option>
+                <option value="saab">Missam</option>
+                <option value="fiat">Shevy</option>
+                <option value="audi">Toyoda</option>
+              </select>
           </div>
-          <div style="padding-bottom: 18px;">Number of children<br/>
-          <input type="number" id="data_9" name="data_9" style="max-width : 250px;" class="form-control"/>
+          <div style="padding-bottom: 18px;">Model<br/>
+          <select id="data_9" name="data_9" style="max-width : 250px;" class="form-control">
+            <option value="volvo">Skipper</option>
+            <option value="saab">Dipper</option>
+            <option value="fiat">Flipper</option>
+            <option value="audi">Whipper</option>
+          </select>
           </div>
+          <h5>OR</h5>  
+          <div style="padding-bottom: 18px;">Type<br/>
+            <select id="data_9" name="data_9" style="max-width : 250px;" class="form-control">
+                <option value="volvo">SUV</option>
+                <option value="saab">Boat</option>
+                <option value="fiat">Car</option>
+                <option value="audi">Van</option>
+              </select>
+        </div>
           <button type="button" class="btn btn-info">Search</button>
         </form>
       </section>
@@ -125,7 +145,7 @@
             </div>
           </div>
           <div class="text-center">
-            <a href="./transportation.html"><button type="button" class="btn btn-info">Next</button></a>
+            <a href="./events.html"><button type="button" class="btn btn-info">Next</button></a>
           </div>
         </div>
       </section>
