--- a/pages/transportation.html
+++ b/pages/transportation.html
@@ -21,20 +21,20 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">Lodging</a>
+                <a class="nav-link" href="./lodging.html">Lodging</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="#">Transportation</a>
+                <a class="nav-link active" href="./transportation.html">Transportation</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
+                <a class="nav-link" href="./events.html">Events</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Activities</a>
+                <a class="nav-link" href="./activities.html">Activities</a>
               </li>
             </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="#">My Account</a>
+              <a class="nav-link" href="./account.html">My Account</a>
             </span>
           </div>
         </div>
