added login page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="./pages/account.html">My Account</a>
+              <a class="nav-link" href="./pages/login.html">My Account</a>
             </span>
           </div>
         </div>
@@ -53,7 +53,7 @@
                 <!--Photo by Elena Zhuravleva from Pexels-->
                 <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
-                <button type="button" class="btn btn-info">Book Your Trip</button>
+                <a href="./pages/lodging.html"><button type="button" class="btn btn-info">Book Your Trip</button></a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -61,7 +61,7 @@
                 <!--Photo by Vincent Gerbouin from Pexels-->
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
-                <button type="button" class="btn btn-info">Book Your Trip</button>
+                <a href="./pages/lodging.html"><button type="button" class="btn btn-info">Book Your Trip</button></a>
                 </div>
             </div>
             <div class="carousel-item">
@@ -69,7 +69,7 @@
                 <!--Photo by Jordan Corrales from Pexels-->
                 <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
-                <button type="button" class="btn btn-info">Book Your Trip</button>
+                <a href="./pages/lodging.html"><button type="button" class="btn btn-info">Book Your Trip</button></a>
                 </div>
             </div>
             </div>
