--- a/pages/events.html
+++ b/pages/events.html
@@ -34,7 +34,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              <a class="nav-link" href="./account.html">My Account</a>
+              <a class="nav-link" href="./login.html">My Account</a>
             </span>
           </div>
         </div>
