--- a/pages/login.html
+++ b/pages/login.html
@@ -8,7 +8,7 @@
     <!--For C856 WGU-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/style.css">
-    <title>Activities</title>
+    <title>Login</title>
 </head>
 
 <body>
@@ -45,68 +45,18 @@
         <form>
           <div style="max-width: 400px;">
           </div>
-          <h2>Account Overview</h2>
-          <div style="padding-bottom: 18px;">Name<br/>
-          <input type="text" placeholder="Name" style="max-width : 250px;" class="form-control" readonly/>
-          </div>
-          <div style="padding-bottom: 18px;">Address<br/>
-          <input type="text" placeholder="123 Street Lane" style="max-width : 250px;" class="form-control" readonly/>
-          </div>
-          <div style="padding-bottom: 18px;">City<br/>
-        <input type="text" placeholder="City" style="max-width : 250px;" class="form-control" readonly/>
+          <h2>Login</h2>
+        <div style="padding-bottom: 18px;">Email<br/>
+        <input type="email" placeholder="New Mexico" style="max-width : 250px;" class="form-control"/>
         </div>
-        <div style="padding-bottom: 18px;">State<br/>
-        <input type="text" placeholder="State" style="max-width : 250px;" class="form-control" readonly/>
-        </div>
-        <div style="padding-bottom: 18px;">Saved Payment Methods<br/>
-        <input type="text" placeholder="Visa ending in 0000" style="max-width : 250px;" class="form-control" readonly/>
+        <div style="padding-bottom: 18px;">Password<br/>
+        <input type="password" placeholder="Visa ending in 0000" style="max-width : 250px;" class="form-control"/>
         </div>
         <div class="text-center">
-          <button type="button" class="btn btn-info">Edit</button>
+          <a id="login" href="account.html"><button type="button" class="btn btn-info">Login</button></a>
         </div>
         </form>
       </section>
-
-      <hr>
-
-      <section id="upcoming">
-        <h3>Upcoming Trips</h3>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <a href="#">
-              <figure class="figure">
-                  <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">INFO</figcaption>
-                  <button type="button" class="btn btn-info">Modify</button>
-                </figure>
-              </a>
-            </div>
-        </div>
-      </section>
-
-      <hr>
-
-      <section id="prvious">
-        <h3>Previous Trips</h3>
-        <div class="container">
-          <div class="row">
-            <div class="col">
-              <a href="#">
-              <figure class="figure">
-                  <img src="../src/img/placeholder.png" class="figure-img img-fluid rounded explore-img" alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">INFO</figcaption>
-                </figure>
-              </a>
-            </div>
-        </div>
-      </section>
-
-      <hr>
-
-      <div class="text-center">
-        <a href="../index.html"><button type="button" class="btn btn-danger">Delete Account</button></a>
-      </div>
         
     </main>
 
