replaced bacon ipsum with lorem to be "professional"

--- a/index.html
+++ b/index.html
@@ -128,14 +128,8 @@
     <section id="about" class="text-center">
         <h2>ABOUT TANITI</h2>
 
-        <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
-            velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
-            pork loin. Cow salami et tempor pariatur picanha, officia irure laboris kevin venison chicken ad. Bacon picanha cillum
-             ipsum, consequat strip steak venison shoulder cupim. Salami shank elit rump, porchetta laboris pork loin ipsum.</p>
-        <p class="island-blurb">Bacon ipsum dolor amet officia in hamburger, alcatra sirloin picanha quis filet mignon ribeye 
-        velit id venison ut anim. Pig mollit pastrami enim turducken short loin ullamco cupidatat velit chicken sint pork 
-        pork loin. Cow salami et tempor pariatur picanha, officia irure laboris kevin venison chicken ad. Bacon picanha cillum
-            ipsum, consequat strip steak venison shoulder cupim. Salami shank elit rump, porchetta laboris pork loin ipsum.</p>
+        <p class="island-blurb">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quisquam iusto eius saepe impedit, mollitia asperiores ab itaque. Commodi inventore doloribus quos obcaecati, iure aspernatur perferendis temporibus assumenda dolor sint?</p>
+        <p class="island-blurb">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur, culpa cum dolores autem error esse reprehenderit vitae architecto non neque tempora sequi tempore tenetur voluptate sit fugit mollitia, illo at!</p>
 
         <div id="map" class="container-fluid text-center">
             <img id="map-img" src="./src/img/island-map.jpg" class="img-fluid" alt="Map of Taniti">
