--- a/pages/events.html
+++ b/pages/events.html
@@ -60,7 +60,7 @@
           <div style="padding-bottom: 18px;">Number of guests<br/>
             <input type="number" id="data_9" name="data_9" style="max-width : 250px;" class="form-control"/>
             </div>
-          <button type="button" class="btn btn-info">Search</button>
+          <button type="button" id="search-btn" class="btn btn-info">Search</button>
         </form>
       </section>
 
@@ -128,5 +128,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../src/js/scripts.js"></script>
+    <script src="../src/js/search.js"></script>
 </body>
 </html>
