--- a/pages/transportation.html
+++ b/pages/transportation.html
@@ -88,7 +88,7 @@
                 <option value="audi">Van</option>
               </select>
         </div>
-          <button type="button" class="btn btn-info">Search</button>
+          <button type="button" id="search-btn" class="btn btn-info">Search</button>
         </form>
       </section>
 
@@ -156,5 +156,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../src/js/scripts.js"></script>
+    <script src="../src/js/search.js"></script>
 </body>
 </html>
