--- a/pages/account.html
+++ b/pages/account.html
@@ -105,7 +105,11 @@
       <hr>
 
       <div class="text-center">
-        <a href="../index.html"><button type="button" class="btn btn-danger">Delete Account</button></a>
+        <button type="button" id="delete-btn" class="btn btn-danger">Delete Account</button>
+        <div id="confirm">
+          <a href="../index.html"><button type="button" id="confirm-btn" class="btn btn-danger">Confirm Delete</button></a>
+          <button type="button" id="cancel-btn" class="btn btn-secondary">Cancel</button>
+        </div>
       </div>
         
     </main>
@@ -117,5 +121,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../src/js/scripts.js"></script>
+    <script src="../src/js/delete.js"></script>
 </body>
 </html>
